# SystemIntegration

./: .gitignore
00_Tasks/01a_File_formats_bonanza/: me.csv  me.json  me.xml
00_Tasks/03a_Data_parsing_server/python_server/: pyproject.toml  read_csv_file.py  read_txt_file.py  read_xml_file.py  read_yaml_file.py
00_Tasks/04b_granular_database_access/: Integrator.md
00_Tasks/06a_WebSocket/: client.js  index.html  package-lock.json  package.json  server.js
00_Tasks/08a_Document_A_Database/: docs_md  schema.dbml  script.sql
00_Tasks/08b_Migrate_Database/: migrate.js  package-lock.json  package.json
00_Tasks/08c_Auth_integration/: Instructions.md
00_Tasks/09a_code_documentation/: README.md
00_Tasks/10a_GraphQL/: index.js  package-lock.json  package.json
00_Tasks/10b_integrate_with_payment/: index.html  package-lock.json  package.json  server.js
01_Miscellaneous/: paymentiframe.html
01a_File_formats_bonanza/: me.txt
01a_File_formats_bonanza/javascript/: package.json  read_json_file.js  read_xml_file.js  read_yaml_file.js
01a_File_formats_bonanza/python/: read_csv_file.py  read_json_file.py  read_txt_file.py
02_Data_Files/: me.json
03_Modules/html_no_modules/: index.js
03_Modules/html_with_modules/: MyModule.js  index.html  index.js
03_Modules/node_commonjs_modules/: index.js
03_Modules/node_es_modules/: index.js
03_Modules/python_modules/: main.py
03a_Data_parsing_server/files/: me.txt
03a_Data_parsing_server/node_server/: package.json
03a_Data_parsing_server/python_server/: main.py  read_json_file.py
04_Encoding_Decoding/node/: index.js
04_Encoding_Decoding/python/: main.py
04a_SSE/node/: app.js  package-lock.json  package.json
04b_granular_database_access/: Exposee.md  Integrator.md  database.md
05_Python_Environments/: main.py
05a_webhooks/Exposee/: app.js  package-lock.json
06_Servers/node/: app.js
06_Servers/node_test/: app.js
06_Servers/python/: main.py  pyproject.toml
08_Server_To_Server/node/: app.js  index.html  package.json
08_Server_To_Server/python/: main.py  pyproject.toml
09_Environment_Variables/node/: package.json
09_Environment_Variables/python/: .env-template  main.py  pyproject.toml
10_/node/: index.js
10_/python/: main.py
11_/node/: app.js
12_Long_Polling/node/: app.js
13_Server-sent_Events/python__sse/: main.py  pyproject.toml
13_Server-sent_Events/python__sse/templates/: index.html
14_WebSockets/python_fastapi/: pyproject.toml
15_Webhooks/python_Webhooks/: main.py  pyproject.toml
17_Multipart_/: index.html  nestedForms.html
17_Multipart_/python_multiparts_forms/: main.py  pyproject.toml
17_WHAT/: index.html
18_Images/: base64.html
20_MPEG_DASH/: app.js
21_MySQL_Backup/: backup.sql
27_Web_Scraping_Crawling/02_Python_Basic/: main.py  pyproject.toml
27_Web_Scraping_Crawling/05_Scrapy_Wiki_Crawler/: pyproject.toml
(+56 files in other folders)
