[tool.poetry]
name = "python-plain"
version = "0.1.0"
description = ""
authors = ["SimonLindegaardM <slm311096@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
