[tool.poetry]
name = "python-multiparts-forms"
version = "0.1.0"
description = ""
authors = ["SimonLindegaardM <slm311096@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
