[tool.poetry]
name = "02-python-basic"
version = "0.1.0"
description = ""
authors = ["SimonLindegaardM <slm311096@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
