[tool.poetry]
name = "python-server"
version = "0.1.0"
description = ""
authors = ["SimonLindegaardM <slm311096@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
